# Android-Servises

./: build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/androidTest/java/com/example/sorters/: BubbleSorterTest.java  CountingSorterTest.java  QuickSorterTest.java
src/androidTest/java/com/example/sortingapp/: ExampleInstrumentedTest.java
src/androidTest/java/com/example/sortmanager/: SortServiceTest.java
src/androidTest/java/com/example/usage/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/aidl/com/example/sortingapp/: ISortService.aidl  SortingMethod.aidl
src/main/aidl/com/example/test/: IMyAidl.aidl
src/main/aidl/com/example/usage/: ISortService.aidl  SortingMethod.aidl
src/main/cpp/: CMakeLists.txt  bubblesort.cpp  bubblesort.h  countingsort.cpp  countingsort.h  generate.cpp  generate.h  native-lib.cpp  native-sort-lib.cpp  native-sort-lib.h  num_generator.cpp  num_generator.h  quicksort.cpp  quicksort.h  testsort.cpp  testsort.h
src/main/java/com/example/sorters/: BubbleSorter.java  CountingSorter.java  QuickSorter.java  Sorter.java  SorterFactory.java
src/main/java/com/example/sortingapp/: MainActivity.java  NumbersAdapter.java  SortingMethod.java
src/main/java/com/example/sortmanager/: SortService.java  SortServiceManager.java
src/main/java/com/example/test/: MainActivity.java  MyService.java  NumbersAdapter.java
src/main/java/com/example/testsortservice/: TestSortService.java
src/main/res/layout/: activity_main.xml  main_recycler_element.xml
src/main/res/values/: strings.xml
(+16 files in other folders)
